@@ -15,6 +15,7 @@
  */
 package org.springframework.social.twitter.api.impl;
 
+import org.springframework.social.twitter.api.AccountSettings;
 import org.springframework.social.twitter.api.DirectMessage;
 import org.springframework.social.twitter.api.Entities;
 import org.springframework.social.twitter.api.HashTagEntity;
@@ -61,6 +62,8 @@ class TwitterModule extends SimpleModule {
 		context.setMixInAnnotations(MediaEntity.class, MediaEntityMixin.class);
 		context.setMixInAnnotations(MentionEntity.class, MentionEntityMixin.class);
 		context.setMixInAnnotations(UrlEntity.class, UrlEntityMixin.class);
+		context.setMixInAnnotations(AccountSettings.class, AccountSettingsMixin.class);
+		context.setMixInAnnotations(AccountSettings.TimeZone.class, AccountSettingsMixin.TimeZoneMixin.class);
 	}
 
 }
