@@ -9,6 +9,7 @@ Improvements
   * Add a builder-style API for creating Tweets. (SOCIALTW-63)
   * Add ability to specify a place ID when updating status. (SOCIALTW-35)
   * Add favorite_count to Tweet class. (SOCIALTW-60)
+  * Add support for fetching Account Settings. (SOCIALTW-47)
 
 Spring Social Twitter 1.1.0 Milestone 3 (July 8, 2013)
 ======================================================
